syntax = "proto3";
package specynetwork.specy.specy;

import "gogoproto/gogo.proto";

option go_package = "github.com/specy-network/specy/x/specy/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  
  uint64 intervalBlock = 1 [(gogoproto.moretags) = "yaml:\"interval_block\""];
  string commissionDenom = 2 [(gogoproto.moretags) = "yaml:\"commission_denom\""];
  uint64 amount = 3 [(gogoproto.moretags) = "yaml:\"amount\""];
}
